[gd_scene load_steps=4 format=1]

[ext_resource path="res://Scripts/itemMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/MainMenu Font.fnt" type="BitmapFont" id=2]
[ext_resource path="res://Scenes/PlayerFight.tscn" type="PackedScene" id=3]

[node name="itemMenu" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 576.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="helmScroll" type="ScrollContainer" parent="CanvasLayer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 128.0
margin/top = 192.0
margin/right = 768.0
margin/bottom = 268.0
scroll/horizontal = true
scroll/vertical = false
__meta__ = { "_edit_group_":true }

[node name="helm" type="HButtonArray" parent="CanvasLayer/helmScroll"]

rect/min_size = Vector2( 640, 64 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 0
size_flags/stretch_ratio = 0.0
margin/left = -1.0
margin/top = 0.0
margin/right = 639.0
margin/bottom = 64.0
custom_constants/button_separator = 0
custom_constants/icon_separator = 0
flat = false
button/count = 0
button/min_button_size = 64.0
button/align = 0

[node name="weaponScroll" type="ScrollContainer" parent="CanvasLayer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 0
margin/left = 128.0
margin/top = 320.0
margin/right = 768.0
margin/bottom = 396.0
scroll/horizontal = true
scroll/vertical = false
__meta__ = { "_edit_group_":true }

[node name="weapon" type="HButtonArray" parent="CanvasLayer/weaponScroll"]

rect/min_size = Vector2( 640, 64 )
focus_neighbour/left = NodePath(".")
focus_neighbour/top = NodePath(".")
focus_neighbour/right = NodePath(".")
focus_neighbour/bottom = NodePath(".")
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = -1.0
margin/top = 0.0
margin/right = 639.0
margin/bottom = 64.0
custom_constants/button_separator = 0
custom_constants/icon_separator = 0
flat = false
button/count = 0
button/min_button_size = 64.0
button/align = 0

[node name="shieldScroll" type="ScrollContainer" parent="CanvasLayer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 0
margin/left = 128.0
margin/top = 448.0
margin/right = 768.0
margin/bottom = 512.0
scroll/horizontal = true
scroll/vertical = false

[node name="shield" type="HButtonArray" parent="CanvasLayer/shieldScroll"]

rect/min_size = Vector2( 640, 64 )
focus_neighbour/left = NodePath(".")
focus_neighbour/top = NodePath(".")
focus_neighbour/right = NodePath(".")
focus_neighbour/bottom = NodePath(".")
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = -1.0
margin/top = 0.0
margin/right = 639.0
margin/bottom = 64.0
custom_constants/button_separator = 0
custom_constants/icon_separator = 0
flat = false
button/count = 0
button/min_button_size = 64.0
button/align = 0

[node name="Button" type="Button" parent="CanvasLayer"]

rect/scale = Vector2( 1, 0.8 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 192.0
margin/bottom = 80.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "PLAY!"
flat = false

[node name="playerGold" type="Label" parent="CanvasLayer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 384.0
margin/top = 64.0
margin/right = 640.0
margin/bottom = 128.0
custom_fonts/font = ExtResource( 2 )
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Player" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( 864, 352 )

[connection signal="button_selected" from="CanvasLayer/helmScroll/helm" to="CanvasLayer" method="_on_helm_button_selected"]

[connection signal="button_selected" from="CanvasLayer/weaponScroll/weapon" to="CanvasLayer" method="_on_weapon_button_selected"]

[connection signal="button_selected" from="CanvasLayer/shieldScroll/shield" to="CanvasLayer" method="_on_shield_button_selected"]

[connection signal="pressed" from="CanvasLayer/Button" to="CanvasLayer" method="_on_Button_pressed"]


